Web Inspector: Docked inspector repositioned incorrectly when dragging frame borders https://bugs.webkit.org/show_bug.cgi?id=139415

Patch by Matt Baker <mattbaker@apple.com> on 2014-12-15
Reviewed by Joseph Pecoraro.

The _ignoreNextInspectedViewFrameDidChange flag wasn't set back to NO after
being tested by inspectedViewFrameDidChange.

* UIProcess/mac/WebInspectorProxyMac.mm:
(-[WKWebInspectorProxyObjCAdapter inspectedViewFrameDidChange:]):

Canonical link: https://commits.webkit.org/157542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177309 268f45cc-cd09-0410-ab3c-d52691b4dbfc